--- a/.github/workflows/AZURE_STATIC_WEB_APPS_API_TOKEN_WONDERFUL_PLANT_04A27D703.yml
+++ b/.github/workflows/AZURE_STATIC_WEB_APPS_API_TOKEN_WONDERFUL_PLANT_04A27D703.yml
@@ -53,5 +53,5 @@ jobs:
         id: closepullrequest
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ AZURE_STATIC_WEB_APPS_API_TOKEN_WONDERFUL_PLANT_04A27D703 }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_WONDERFUL_PLANT_04A27D703 }}
           action: "close"
